add animated splash screen

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,15 @@
 {
-  "cSpell.words": ["cupertino", "fullscreen", "Schyler", "taafi"]
+  "cSpell.words": [
+    "audioplayers",
+    "Baloo",
+    "Bhaijaan",
+    "cupertino",
+    "fullscreen",
+    "Schyler",
+    "taafi",
+    "تعافي",
+    "طابور",
+    "مافي",
+    "مرحبا"
+  ]
 }
