--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,12 +29,15 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   animated_splash_screen: ^1.3.0
-
   cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
   flutter_animate: ^4.5.0
+  flutter_localizations:
+    sdk: flutter
   flutter_native_splash: ^2.4.1
+  font_awesome_flutter: ^10.7.0
+  msh_checkbox: ^2.0.1
   page_transition: ^2.1.0
 
 dev_dependencies:
@@ -53,7 +56,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-  
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
   # For details regarding adding assets from package dependencies, see
@@ -67,6 +70,14 @@ flutter:
     - family: Baloo Bhaijaan 2
       fonts:
         - asset: assets/fonts/BalooBhaijaan2-Regular.ttf
+        - asset: assets/fonts/BalooBhaijaan2-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/BalooBhaijaan2-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/BalooBhaijaan2-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/BalooBhaijaan2-ExtraBold.ttf
+          weight: 900
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
 flutter_native_splash:
@@ -155,3 +166,5 @@ flutter_native_splash:
   #info_plist_files:
   #  - 'ios/Runner/Info-Debug.plist'
   #  - 'ios/Runner/Info-Release.plist'
+flutter_intl:
+  enabled: true
