--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
     sdk: flutter
   flutter_native_splash: ^2.4.1
   font_awesome_flutter: ^10.7.0
+  intl: ^0.19.0
   msh_checkbox: ^2.0.1
   page_transition: ^2.1.0
 
