--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,13 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_native_splash: ^2.4.1
+  flutter_svg: ^2.0.10+1
   font_awesome_flutter: ^10.7.0
+  gradient_borders: ^1.0.1
   intl: ^0.19.0
   msh_checkbox: ^2.0.1
   page_transition: ^2.1.0
+  smooth_page_indicator: ^1.2.0+3
 
 dev_dependencies:
   flutter_lints: ^4.0.0
@@ -57,7 +60,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-    - assets/images/icons/
+    - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
