--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   msh_checkbox: ^2.0.1
   page_transition: ^2.1.0
   smooth_page_indicator: ^1.2.0+3
+  voice_message_package: ^2.2.1
 
 dev_dependencies:
   flutter_lints: ^4.0.0
